--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".download.DownLoadActivity"/>
         <activity android:name=".wifi.WifiSettings"/>
         <activity android:name=".mvc.CountActivity"/>
+        <activity android:name=".mvp.NumActivity"/>
     </application>
 
 </manifest>
