--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         <activity android:name=".database.SprayActivity"/>
         <activity android:name=".download.DownLoadActivity"/>
         <activity android:name=".wifi.WifiSettings"/>
+        <activity android:name=".ipc.FirstActivity"/>
+        <service android:name=".ipc.RemoteService" android:process=":RemoteService"/>
     </application>
 
 </manifest>
