--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,10 @@
         <activity android:name=".mvc.CountActivity"/>
         <activity android:name=".mvp.NumActivity"/>
         <activity android:name=".ipc.FirstActivity"/>
+        <activity android:name=".myview.TouchEventActivity"/>
         <service android:name=".ipc.RemoteService" android:process=":RmoteService"/>
         <service android:name=".ipc.BookManagerService" android:process=":BookRemoteService"/>
+
     </application>
 
 </manifest>
