--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
 
         <activity android:name=".bitmap.BitmapActivity"/>
         <activity android:name=".bitmap.LargeImageViewActivity"/>
+        <activity android:name=".RxJava.RxJavaActivity"/>
     </application>
 
 </manifest>
