--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'org.xutils:xutils:3.3.22'
     compile 'de.greenrobot:greendao:2.1.0'
     compile 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v0.0.5'
-    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+
     compile 'com.bugtags.library:bugtags-lib:latest.integration'
 
     compile ('com.android.support:support-v4:21.0.3')
@@ -76,9 +76,14 @@ dependencies {
     // LeanCloud 应用内搜索包
     compile ('cn.leancloud.android:avoscloud-search:v3.+@aar')
 
-    compile 'io.reactivex:rxandroid:1.2.1'
+
 // Because RxAndroid releases are few and far between, it is recommended you also
 // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
 
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
 }
