--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,12 +54,11 @@
         <activity
             android:name=".CollapsingToolbar.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".bitmap.BitmapActivity"/>
-        <activity android:name=".bitmap.LargeImageViewActivity"/>
-        <activity android:name=".RxJava.RxJavaActivity"/>
-        <activity android:name=".retrofit.RetrofitActivity"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".bitmap.BitmapActivity" />
+        <activity android:name=".bitmap.LargeImageViewActivity" />
+        <activity android:name=".RxJava.RxJavaActivity" />
+        <activity android:name=".retrofit.RetrofitActivity" />
     </application>
 
 </manifest>
