--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,19 +18,23 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-
-        packagingOptions{
+        packagingOptions {
             exclude 'META-INF/LICENSE.txt'
             exclude 'META-INF/NOTICE.txt'
         }
         lintOptions {
             abortOnError false
+        }
+        debug {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
@@ -51,50 +55,42 @@ dependencies {
     compile 'org.xutils:xutils:3.3.22'
     compile 'de.greenrobot:greendao:2.1.0'
     compile 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v0.0.5'
-
     compile 'com.bugtags.library:bugtags-lib:latest.integration'
-
-    compile ('com.android.support:support-v4:21.0.3')
-
+    compile 'com.android.support:support-v4:25.0.0'
     // LeanCloud 基础包
-    compile ('cn.leancloud.android:avoscloud-sdk:v3.+')
-
+    compile 'cn.leancloud.android:avoscloud-sdk:v3.+'
     // 推送与实时聊天需要的包
-    compile ('cn.leancloud.android:avoscloud-push:v3.+@aar'){transitive = true}
-
+    compile('cn.leancloud.android:avoscloud-push:v3.+@aar') { transitive = true }
     // LeanCloud 统计包
-    compile ('cn.leancloud.android:avoscloud-statistics:v3.+')
-
+    compile 'cn.leancloud.android:avoscloud-statistics:v3.+'
     // LeanCloud 用户反馈包
-    compile ('cn.leancloud.android:avoscloud-feedback:v3.+@aar')
-
+    compile 'cn.leancloud.android:avoscloud-feedback:v3.+@aar'
     // avoscloud-sns：LeanCloud 第三方登录包
-    compile ('cn.leancloud.android:avoscloud-sns:v3.+@aar')
-    compile ('cn.leancloud.android:qq-sdk:1.6.1-leancloud')
+    compile 'cn.leancloud.android:avoscloud-sns:v3.+@aar'
+    compile 'cn.leancloud.android:qq-sdk:1.6.1-leancloud'
     // 目前新浪微博官方只提供 jar 包的集成方式
+
     // 请手动下载新浪微博 SDK 的 jar 包，将其放在 libs 目录下进行集成
 
     // LeanCloud 应用内搜索包
-    compile ('cn.leancloud.android:avoscloud-search:v3.+@aar')
+    compile 'cn.leancloud.android:avoscloud-search:v3.+@aar'
+    // Because RxAndroid releases are few and far between, it is recommended you also
 
-
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'io.reactivex:rxjava:1.0.10'
-
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.google.dagger:dagger-compiler:2.0.2'
-    compile 'org.glassfish:javax.annotation:10.0-b28'// 添加java 注解库
-
+    compile 'org.glassfish:javax.annotation:10.0-b28'
+    // 添加java 注解库
     compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
